@@ -1,3 +1,8 @@
+2007-08-06  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/Account.cs, Banter/GroupWindow.cs, Banter/Conversation.cs:
+	  added code to invite someone to the current user's roster
+
 2007-08-06  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* ChangeLog, Banter/ChatWindow.cs, Banter/PersonCard.cs: Applied patch
